# mplstylize

./: README.md  pyproject.toml
.github/workflows/: release.yml
mplstylize/: __init__.py
src/mplstylize/: __init__.py
