[project]
name = "mplstylize"
version = "0.1.0"
description = "Style utilities for matplotlib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.9.2"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mplstylize"]
package-dir = { "" = "src" }
include-package-data = true