[project]
name = "mplstylize"
version = "0.1.1"
description = "Style utilities for matplotlib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.30.0",
    "matplotlib>=3.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
license = "MIT"

